# HYSPLIT-Planthopper-Forecast

./: .gitignore  LICENSE  README.md
.github/workflows/: planthopper-forecast.yml
prediction/: 20220101.json  20220101_max_freq.csv  20220102.json  20220102_max_freq.csv  20220103.json  20220103_max_freq.csv  20220104.json  20220104_max_freq.csv  20220105.json  20220105_max_freq.csv  20220106.json  20220106_max_freq.csv  20220107.json  20220107_max_freq.csv  20220108.json  20220108_max_freq.csv  20220109.json  20220109_max_freq.csv  20220110.json  20220110_max_freq.csv  20220111.json  20220111_max_freq.csv  20220112.json  20220112_max_freq.csv  20220113.json  20220113_max_freq.csv  20220114.json  20220114_max_freq.csv  20220115.json  20220115_max_freq.csv  20220116.json  20220116_max_freq.csv  20220117.json  20220117_max_freq.csv  20220118.json  20220118_max_freq.csv  20220119.json  20220119_max_freq.csv  20220120.json  20220120_max_freq.csv  (+3254 more)
predictor/: 1_GFS_downloader.py  2_HYSPLIT_exec.py  cron_predict.sh  plant_hopper_source.csv  requirements.txt  run_forecast.py
predictor/HYSPLIT/: Makefile  Makefile.inc  Makefile.inc.gfortran  Makefile.inc.intel  Readme_hysplit.txt
predictor/HYSPLIT/cluster/: readme_cluster.txt
predictor/HYSPLIT/cluster/archive/: readme_archive.txt
predictor/HYSPLIT/cluster/endpts/: readme_endpts.txt
predictor/HYSPLIT/cluster/example/: readme_example_run.txt
predictor/HYSPLIT/cluster/example/output/: C0_7.tdump  C0_7mean.tdump  C1_7.tdump  C1_7mean.tdump  C2_7.tdump  C2_7mean.tdump  C3_7.tdump  C3_7mean.tdump  C4_7.tdump  C4_7mean.tdump  C5_7.tdump  C5_7mean.tdump  C6_7.tdump  C6_7mean.tdump  C7_7.tdump  C7_7mean.tdump  CCONTROL  CLUSEND  CLUSLIST_7  CLUSTER  CLUSTERno  CMESSAGE  Cmean0_7.tdump  Cmean1_7.tdump  DELPCT  GIS_clusmeans7-0_01.att  GIS_clusmeans7-0_01.txt  GIS_clusmeans7-1_01.att  GIS_clusmeans7-1_01.txt  GIS_cluster7_00.att  GIS_cluster7_00.txt  GIS_cluster7_01.att  GIS_cluster7_01.txt  GIS_cluster7_02.att  GIS_cluster7_02.txt  GIS_cluster7_03.att  GIS_cluster7_03.txt  GIS_cluster7_04.att  GIS_cluster7_04.txt  GIS_cluster7_05.att  (+17 more)
predictor/HYSPLIT/cluster/working/: readme_working.txt
predictor/HYSPLIT/cmaq/: Readme_cmaq.txt  con2cdf3.f  con2cdf4.f  conc2api.f  traj2api.f
predictor/HYSPLIT/data2arl/: Readme_data2arl.txt
predictor/HYSPLIT/data2arl/api2arl/: Makefile  Readme_api2arl.txt  api2arl_v5.f  api2arl_v6.f  arlmod.f  pakinp.inc  pakrec.inc  pakset.inc
predictor/HYSPLIT/data2arl/cdf2arl/: Makefile
predictor/HYSPLIT/data2arl/era52arl/: Makefile
predictor/HYSPLIT/data2arl/hrrr2arl/: Makefile  Readme_hrrr2arl.txt  hrrr2arl.f  hrrrv12arl.f  hrrrv12arl_v1.f  hrrrv12arl_v2.f
predictor/HYSPLIT/data2arl/mer2arl/: Makefile
predictor/HYSPLIT/datem/: Readme_datem.txt  captex2.cnt  captex2.txt  captex2_608.txt
predictor/HYSPLIT/document/: EULA.txt  Readme_document.txt  hysplit_license.txt  updates.txt
predictor/HYSPLIT/examples/: README.txt
predictor/HYSPLIT/examples/SOS/: labels.txt  run.scr
predictor/HYSPLIT/examples/SOS/playlist/: playlist.sos
predictor/HYSPLIT/examples/grads/: README.txt
predictor/HYSPLIT/examples/grads/Concentration/: Readme.txt  con2grad.f  makeplot.txt
predictor/HYSPLIT/examples/grads/Meteorology/: Readme.txt  arl2grad.f
predictor/HYSPLIT/examples/grads/Scripts/: arl2grad.txt  arl_01.gs  arl_02.gs  (+6 more)
predictor/HYSPLIT/exec/: Makefile  Readme_exec.txt  accudiv  add_data  add_grid  add_miss  add_time  add_velv  aer2arl  api2arl_v1  api2arl_v2  api2arl_v3  api2arl_v4  api2arl_v6  apidump  arl2grad  arl2meds  arw2arl  asc2par  boxplots  c2array  c2datem  cat2svg  catps2ps  cdf2arl  cesm2arl  chk_data  chk_file  chk_index  chk_rec  chk_times  clusend  cluslist  clusmem  clusplot  cluster  con2arcv  con2asc  con2cdf4  con2ctbt  (+143 more)
predictor/HYSPLIT/gisprog/: Readme_gisprog.txt
predictor/HYSPLIT/gisprog/arlshapes/: Makefile  ascii2shp  config.status  dbf2csv  shapeHysplitOut  shapearea  shapecat  shapematch  shapesplit  shapesvg  shapeunion
predictor/HYSPLIT/graphics/: Readme_graphics.txt  shapefiles_arl.txt  shapefiles_nam.txt  shapefiles_rds.txt
predictor/HYSPLIT/guicode/: con2rem.tcl  conc_add.tcl  conc_cfg.tcl  conc_disp.tcl  conc_geol.tcl  conc_grid.tcl  conc_rank.tcl  conc_stn.tcl  conc_time.tcl  datem.tcl  disp_boxp.tcl  disp_grid.tcl  disp_map.tcl  disp_part.tcl  disp_prob.tcl  exec_cfg.tcl  gem_disp.tcl  get_arc.tcl  get_arl.tcl  htmlbrws.tcl  hymenu.tcl  hysplit.tcl  par_shift.tcl  pole_disp.tcl  srm_disp.tcl  svg2gif.tcl  traj_cfg.tcl  traj_disp.tcl  traj_freq.tcl  trajclus_disp.tcl  trajclus_run.tcl
predictor/HYSPLIT/html/: S000.htm  S100.htm  S131.htm  S133.htm  S134.htm  S140.htm  S141.htm  S142.htm  S230.htm  S256.htm  S261.htm  S314.htm  S330.htm  S331.htm  S333.htm  S338.htm  S339.htm  S340.htm  S342.htm  S345.htm  S357.htm  S361.htm  S410.htm  S416.htm  S418.htm  S420.htm  S500.htm  S640.htm  S641.htm  cover.htm  index.htm  util.htm
predictor/HYSPLIT/python/: Readme_python.txt  install_win10.bat  install_win10.txt  pkgs_win10.txt  uninstall_win10.bat
predictor/HYSPLIT/qwikcode/: map_county
predictor/HYSPLIT/scripts/: Readme_scripts.txt  autoconc.sh  autotraj.sh  multiconc.sh  tcm_extract.sh  xtrct_stn.sh
predictor/HYSPLIT/source/: version1.inc  version2.inc
predictor/HYSPLIT/testing/: Makefile  arlmap  grun.scr  xcluster_example_svg.scr  xcluster_svg.bat  xrun.bat  xrun.scr  xrun_svg.bat  xrun_svg.scr  yrun.scr
predictor/HYSPLIT/testing/ctests/: CMakeLists.txt  README.txt  TESTMET.INC  clean.sh  test100.f90  test200.f90  testadviec.f90  testchmgea.f90  testcnllxy.f90  testesat.f90  testlonavg.f90  testmapbox.f90  testmet.f90  testmetdiv.f90  testpardsp.f90  testparvr3.f90  testprfmod.f90  testrandom.f90  testrdizsg.f90  testrdwhyb.f90  testregion.f90  testsort.f90  teststrutl.f90  testzindex.f90  utests.f90  utests.h  utests.inc
predictor/HYSPLIT/testing/ctests/data/: README.txt  pofile.gefsA.txt  pofile.gefsB.txt
predictor/HYSPLIT/testing/libhysplit/: Makefile  Readme.txt  cutils_test.cpp  genctr_test.cpp
predictor/HYSPLIT/working/: Readme_working.txt
(+1208 files in other folders)
